--- a/debian/rules
+++ b/debian/rules
@@ -21,9 +21,6 @@ DEB_CLASSPATH = $(shell for jar in $(DEB_JARS); do \
 T_VER := $(shell dpkg-parsechangelog | egrep '^Version:' \
 	| cut -f 2 -d ' ' | cut -f 2 -d ' ' | sed 's/-[^-]*$$//' | sed 's/~/-/')
 
-# The Tomcat jars linked to /usr/share/tomcat8/lib in the tomcat-common package
-T_JARS := tomcat-i18n-fr tomcat-i18n-es tomcat-i18n-ja catalina-ant
-
 # The Tomcat jars without the tomcat- prefix generated in the BLDLIB directory
 T_MAVENIZED_JARS := jasper-el annotations-api jasper catalina-ha catalina websocket-api
 
@@ -114,27 +111,36 @@ binary-indep: build install
 	for i in $(T_MAVENIZED_JARS); \
 	do \
 		mh_installjar -plibtomcat8-java -l           \
+	                      --usj-name=tomcat8-$$i         \
 	                      debian/poms/tomcat-$$i.pom     \
 	                      $(BLDLIB)/$$i.jar              \
 	                      usr/share/tomcat8/lib/$$i.jar; \
 	done
 	
-	mh_installjar -plibtomcat8-java -l --usj-name=catalina-tribes  debian/poms/tomcat-tribes.pom $(BLDLIB)/catalina-tribes.jar usr/share/tomcat8/lib/catalina-tribes.jar
-	mh_installjar -plibtomcat8-java -l --usj-name=tomcat-api       debian/poms/tomcat-api.pom    $(BLDLIB)/tomcat-api.jar      usr/share/tomcat8/lib/tomcat-api.jar
-	mh_installjar -plibtomcat8-java -l --usj-name=tomcat-coyote    debian/poms/tomcat-coyote.pom $(BLDLIB)/tomcat-coyote.jar   usr/share/tomcat8/lib/tomcat-coyote.jar
-	mh_installjar -plibtomcat8-java -l --usj-name=tomcat-juli      debian/poms/tomcat-juli.pom   $(BLDBIN)/tomcat-juli.jar
-	mh_installjar -plibtomcat8-java -l --usj-name=tomcat-util      debian/poms/tomcat-util.pom   $(BLDLIB)/tomcat-util.jar     usr/share/tomcat8/lib/tomcat-util.jar
-	mh_installjar -plibtomcat8-java -l --usj-name=tomcat-jni       debian/poms/tomcat-jni.pom    $(BLDLIB)/tomcat-jni.jar      usr/share/tomcat8/lib/tomcat-jni.jar
-	mh_installjar -plibtomcat8-java -l --usj-name=tomcat-spdy      debian/poms/tomcat-spdy.pom   $(BLDLIB)/tomcat-spdy.jar     usr/share/tomcat8/lib/tomcat-spdy.jar
-	mh_installjar -plibtomcat8-java -l --usj-name=tomcat-websocket debian/poms/tomcat-websocket.pom $(BLDLIB)/tomcat-websocket.jar usr/share/tomcat8/lib/tomcat-websocket.jar
-	mh_installjar -plibtomcat8-java -l --usj-name=tomcat-jdbc      debian/poms/tomcat-jdbc.pom   output/jdbc-pool/tomcat-jdbc.jar  usr/share/tomcat8/lib/tomcat-jdbc.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-tribes    debian/poms/tomcat-tribes.pom $(BLDLIB)/catalina-tribes.jar usr/share/tomcat8/lib/catalina-tribes.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-api       debian/poms/tomcat-api.pom    $(BLDLIB)/tomcat-api.jar      usr/share/tomcat8/lib/tomcat-api.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-coyote    debian/poms/tomcat-coyote.pom $(BLDLIB)/tomcat-coyote.jar   usr/share/tomcat8/lib/tomcat-coyote.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-juli      debian/poms/tomcat-juli.pom   $(BLDBIN)/tomcat-juli.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-util      debian/poms/tomcat-util.pom   $(BLDLIB)/tomcat-util.jar     usr/share/tomcat8/lib/tomcat-util.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-jni       debian/poms/tomcat-jni.pom    $(BLDLIB)/tomcat-jni.jar      usr/share/tomcat8/lib/tomcat-jni.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-spdy      debian/poms/tomcat-spdy.pom   $(BLDLIB)/tomcat-spdy.jar     usr/share/tomcat8/lib/tomcat-spdy.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-websocket debian/poms/tomcat-websocket.pom $(BLDLIB)/tomcat-websocket.jar usr/share/tomcat8/lib/tomcat-websocket.jar
+	mh_installjar -plibtomcat8-java -l --usj-name=tomcat8-jdbc      debian/poms/tomcat-jdbc.pom   output/jdbc-pool/tomcat-jdbc.jar  usr/share/tomcat8/lib/tomcat-jdbc.jar
 	
-	for i in $(T_JARS); do \
-		mv $(BLDLIB)/$$i.jar $(BLDLIB)/$$i-$(T_VER).jar && \
-		dh_install -plibtomcat8-java $(BLDLIB)/$$i-$(T_VER).jar      usr/share/java && \
-		dh_link -plibtomcat8-java    usr/share/java/$$i-$(T_VER).jar usr/share/java/$$i.jar && \
-		dh_link -ptomcat8-common     usr/share/java/$$i-$(T_VER).jar usr/share/tomcat8/lib/$$i.jar; \
+	# Install the i18n jars	
+	for i in i18n-fr i18n-es i18n-ja; \
+	do \
+		mv $(BLDLIB)/tomcat-$$i.jar $(BLDLIB)/tomcat8-$$i-$(T_VER).jar && \
+		dh_install -plibtomcat8-java $(BLDLIB)/tomcat8-$$i-$(T_VER).jar      usr/share/java && \
+		dh_link -plibtomcat8-java    usr/share/java/tomcat8-$$i-$(T_VER).jar usr/share/java/tomcat8-$$i.jar && \
+		dh_link -ptomcat8-common     usr/share/java/tomcat8-$$i-$(T_VER).jar usr/share/tomcat8/lib/tomcat-$$i.jar; \
 	done
+	
+	# Install catalina-ant.jar
+	mv $(BLDLIB)/catalina-ant.jar $(BLDLIB)/tomcat8-catalina-ant-$(T_VER).jar
+	dh_install -plibtomcat8-java $(BLDLIB)/tomcat8-catalina-ant-$(T_VER).jar      usr/share/java
+	dh_link -plibtomcat8-java    usr/share/java/tomcat8-catalina-ant-$(T_VER).jar usr/share/java/tomcat8-catalina-ant.jar
+	dh_link -ptomcat8-common     usr/share/java/tomcat8-catalina-ant-$(T_VER).jar usr/share/tomcat8/lib/catalina-ant.jar
 	
 	dh_install --exclude=.bat --exclude=Thumbs.db
 	dh_link
