Moved the tomcat-{servlet|jsp|el}-api artifacts from libservlet3.1-java to libtomcat8-java

--- a/debian/control
+++ b/debian/control
@@ -70,7 +70,7 @@ Architecture: all
 Depends: libecj-java,
          libcommons-pool-java,
          libcommons-dbcp-java,
-         libservlet3.1-java (>= ${source:Version}), ${misc:Depends}
+         ${misc:Depends}
 Suggests: tomcat8 (>= ${source:Version})
 Description: Apache Tomcat 8 - Servlet and JSP engine -- core libraries
  Apache Tomcat implements the Java Servlet and the JavaServer Pages (JSP)
