Added the javax.websocket-api artifact to libservlet3.1-java

--- a/debian/control
+++ b/debian/control
@@ -83,7 +83,7 @@ Description: Apache Tomcat 8 - Servlet and JSP engine -- core libraries
 Package: libservlet3.1-java
 Architecture: all
 Depends: ${misc:Depends}
-Description: Servlet 3.1, JSP 2.3 and EL 3.0 Java API classes
+Description: Servlet 3.1, JSP 2.3, EL 3.0 and WebSocket 1.0 Java API classes
  Apache Tomcat implements the Java Servlet and the JavaServer Pages (JSP)
  specifications from Oracle, and provides a "pure Java" HTTP web
  server environment for Java code to run.
@@ -95,7 +95,7 @@ Section: doc
 Architecture: all
 Depends: ${misc:Depends}
 Suggests: libservlet3.1-java (>= ${source:Version})
-Description: Servlet 3.1, JSP 2.3 and EL 3.0 Java API documentation
+Description: Servlet 3.1, JSP 2.3, EL 3.0 and WebSocket 1.0 Java API documentation
  Apache Tomcat implements the Java Servlet and the JavaServer Pages (JSP)
  specifications from Oracle, and provides a "pure Java" HTTP web
  server environment for Java code to run.
