--- a/debian/rules
+++ b/debian/rules
@@ -151,9 +151,10 @@ binary-indep: build install
 	dh_link
 	
 	mh_installpoms -plibservlet3.1-java
-	mh_installjar -plibservlet3.1-java -l -s --usj-name=servlet-api debian/javaxpoms/servlet-api.pom $(BLDLIB)/servlet-api.jar
-	mh_installjar -plibservlet3.1-java -l -s --usj-name=jsp-api     debian/javaxpoms/jsp-api.pom     $(BLDLIB)/jsp-api.jar
-	mh_installjar -plibservlet3.1-java -l -s --usj-name=el-api      debian/javaxpoms/el-api.pom      $(BLDLIB)/el-api.jar
+	mh_installjar -plibservlet3.1-java -l -s --usj-name=servlet-api   debian/javaxpoms/servlet-api.pom   $(BLDLIB)/servlet-api.jar
+	mh_installjar -plibservlet3.1-java -l -s --usj-name=jsp-api       debian/javaxpoms/jsp-api.pom       $(BLDLIB)/jsp-api.jar
+	mh_installjar -plibservlet3.1-java -l -s --usj-name=el-api        debian/javaxpoms/el-api.pom        $(BLDLIB)/el-api.jar
+	mh_installjar -plibservlet3.1-java -l -s --usj-name=websocket-api debian/javaxpoms/websocket-api.pom $(BLDLIB)/websocket-api.jar
 	
 	rm -r debian/poms
 	rm -rf \
